# ai-encyclopedia-backend

./: docker-compose.yml
chat_gpt_engine/: Dockerfile  pyproject.toml
encyclopedia_gateway/: Dockerfile  pyproject.toml  service_pb2.py
encyclopedia_gateway/src/: app.py  router.py
encyclopedia_gateway/src/routers/: temp.py
gpt/: Dockerfile  app.py  pyproject.toml  service_pb2_grpc.py
grpc/: service.proto
main/: Dockerfile  app.py
platform/: Dockerfile  app.py  pyproject.toml
